--- a/src/pages/appointment-list/appointment-list.html
+++ b/src/pages/appointment-list/appointment-list.html
@@ -18,7 +18,7 @@
 
   <ion-list>
 
-    <button ion-item *ngFor="let appointment of appointments" (click)="goToSessionDetail(session)">
+    <button ion-item *ngFor="let appointment of appointments" (click)="goToAppointment(appointment)">
         <ion-avatar item-end>
           <img src="assets/img/avatar-gollum.jpg">
         </ion-avatar>
