--- a/src/pages/available-times/available-times.html
+++ b/src/pages/available-times/available-times.html
@@ -19,23 +19,32 @@
 
 <ion-content padding>
   <ion-list ion-row>
-    <ion-item (click)='close("09:00 AM")' ion-col col-4 no-lines>
-      <button ion-button round color="light">09:00 AM</button>
+    <ion-item (click)='close("09:00")' ion-col col-4 no-lines>
+      <button ion-button round color="light">09:00</button>
     </ion-item>
-    <ion-item (click)='close("10:00 AM")' ion-col col-4 no-lines>
-      <button ion-button round color="default">10:00 AM</button>
+    <ion-item (click)='close("10:00")' ion-col col-4 no-lines>
+      <button ion-button round color="default">10:00</button>
     </ion-item>
-     <ion-item (click)='close("11:00 AM")' ion-col col-4 no-lines>
-      <button ion-button round color="light">11:00 AM</button>
+     <ion-item (click)='close("11:00")' ion-col col-4 no-lines>
+      <button ion-button round color="light">11:00</button>
     </ion-item>
-    <ion-item (click)='close("12:00 PM")' ion-col col-4 no-lines>
-      <button ion-button round color="light">12:00 PM</button>
+    <ion-item (click)='close("12:00")' ion-col col-4 no-lines>
+      <button ion-button round color="light">12:00</button>
     </ion-item>
-    <ion-item (click)='close("01:00 PM")' ion-col col-4 no-lines>
-      <button ion-button round color="light">01:00 PM</button>
+    <ion-item (click)='close("14:00")' ion-col col-4 no-lines>
+      <button ion-button round color="light">14:00</button>
     </ion-item>
-     <ion-item (click)='close("02:00 PM")' ion-col col-4 no-lines>
-      <button ion-button round color="light">02:00 PM</button>
+     <ion-item (click)='close("15:00")' ion-col col-4 no-lines>
+      <button ion-button round color="light">15:00</button>
+    </ion-item>
+    <ion-item (click)='close("16:00")' ion-col col-4 no-lines>
+      <button ion-button round color="light">16:00</button>
+    </ion-item>
+    <ion-item (click)='close("17:00")' ion-col col-4 no-lines>
+      <button ion-button round color="light">17:00</button>
+    </ion-item>
+    <ion-item (click)='close("18:00")' ion-col col-4 no-lines>
+      <button ion-button round color="light">18:00</button>
     </ion-item>
   </ion-list>
 </ion-content>
