--- a/src/pages/landing/landing.html
+++ b/src/pages/landing/landing.html
@@ -14,7 +14,7 @@
         Bienvenido a <b>Medical App for Patients</b>
       </h2>
       <p>
-        Para empezar a usar  <b>Medical App</b> es necesario que algún doctor afiliado te haya mandado un código de registro.
+        Para empezar a usar  <b>Medical App</b> es necesario que algún doctor afiliado te haya mandado un código de invitación.
       </p>
     </ion-slide>
 
