--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -12,30 +12,30 @@
     <ion-slide>
       <img src="assets/img/tutorial-slide-1.png" class="slide-image"/>
       <h2 class="slide-title">
-        Welcome to <b>ICA</b>
+        Bienvenido a <b>Medical App for patients</b>
       </h2>
       <p>
-        The <b>ionic conference app</b> is a practical preview of the ionic framework in action, and a demonstration of proper code use.
+        Con <b>Medical app for patients</b> podrás ver la información de tus doctores, agendar citas, cancelarlas, y mucho más.
       </p>
     </ion-slide>
 
     <ion-slide>
       <img src="assets/img/tutorial-slide-2.png" class="slide-image"/>
-      <h2 class="slide-title" >What is Ionic?</h2>
-      <p><b>Ionic Framework</b> is an open source SDK that enables developers to build high quality mobile apps with web technologies like HTML, CSS, and JavaScript.</p>
+      <h2 class="slide-title" >Obtén tu registro</h2>
+      <p>Para poder usar <b>Medical app for patients</b> te deberás registrar creando una cuenta o usando alguna red social de tu preferencia.</p>
     </ion-slide>
 
     <ion-slide>
-      <img src="assets/img/tutorial-slide-3.png" class="slide-image"/>
-      <h2 class="slide-title">What is Ionic Platform?</h2>
-      <p>The <b>Ionic Platform</b> is a cloud platform for managing and scaling Ionic apps with integrated services like push notifications, native builds, user auth, and live updating.</p>
+      <img src="assets/img/doctor.png" class="slide-image"/>
+      <h2 class="slide-title">Agrega un doctor</h2>
+      <p>Para poder agregar un doctor en <b>Medical App for Patients</b> es necesario que algún doctor afiliado te haya mandado un código de invitación.</p>
     </ion-slide>
 
     <ion-slide>
       <img src="assets/img/tutorial-slide-4.png" class="slide-image"/>
-      <h2 class="slide-title">Ready to Play?</h2>
+      <h2 class="slide-title">¿ Listo para empezar ?</h2>
       <button ion-button icon-right large clear (click)="startApp()">
-        Continue
+        Continuar
         <ion-icon name="arrow-forward"></ion-icon>
       </button>
     </ion-slide>
