--- a/src/pages/doctor/doctor.html
+++ b/src/pages/doctor/doctor.html
@@ -59,7 +59,7 @@
 </ion-content>
 
 <ion-footer no-border>
-    <button ion-button icon-left full (click)='goToSchedule(doctor)'>
+    <button ion-button icon-left full color="secondary" (click)='goToSchedule(doctor)'>
       <ion-icon name="time"></ion-icon>
       Agendar una cita
     </button>
