--- a/src/pages/appointment/appointment.html
+++ b/src/pages/appointment/appointment.html
@@ -66,9 +66,9 @@
     </button>
   </ion-col>
   <ion-col col-6 no-padding>
-    <button ion-button color='secundary' full>
+    <button ion-button color='secondary' full>
       <!--<ion-icon name="calendar"></ion-icon>-->
-      Re agender
+      Re agendar
     </button>
   </ion-col>
 </ion-footer>
