--- a/src/pages/doctor-invitation/doctor-invitation.html
+++ b/src/pages/doctor-invitation/doctor-invitation.html
@@ -31,10 +31,10 @@
   <ion-list>
     <form [formGroup]="form">
       <ion-item>
-        <ion-label stacked>Número de invitación</ion-label>
+        <ion-label floating>Número de invitación</ion-label>
         <ion-input formControlName="invitationNumber" required type="text" value="" [(ngModel)]="invitationNumber"></ion-input>
       </ion-item>
-      <p *ngIf="formErrors.invitationNumber" class="formErrorMessage">{{ formErrors.invitationNumber }}</p>
+      <p *ngIf="formErrors.invitationNumber" class="form-error-message">{{ formErrors.invitationNumber }}</p>
     </form>
   </ion-list>
 </ion-content>
