--- a/src/pages/landing/landing.html
+++ b/src/pages/landing/landing.html
@@ -23,7 +23,7 @@
       <h2 class="slide-title" >Registro de doctor</h2>
       <ion-list>
           <ion-item>
-                <ion-label stacked>Número de invitación</ion-label>
+                <ion-label floating>Número de invitación</ion-label>
                 <ion-input type="text" value="" [(ngModel)]="invitationNumber"></ion-input>
           </ion-item>
       </ion-list>    
